cmake_minimum_required(VERSION 3.29)
project(steganografia)

set(CMAKE_CXX_STANDARD 20)

include(FetchContent)

FetchContent_Declare(
        fmt
        GIT_REPOSITORY https://github.com/fmtlib/fmt
        GIT_TAG 11.0.2
)

include(FetchContent)

FetchContent_Declare(
        SFML
        GIT_REPOSITORY  https://github.com/SFML/SFML
        GIT_TAG         2.6.1
)

FetchContent_MakeAvailable(fmt)
FetchContent_MakeAvailable(SFML)

add_executable(steganografia main.cpp
        app.h
        app.cpp)
target_link_libraries(steganografia fmt)
target_link_libraries(steganografia sfml-graphics)
